Separate part of ClassUtils into TypeUtils.